--- a/static/selection/styles.css
+++ b/static/selection/styles.css
@@ -18,7 +18,7 @@
     padding: 0;
 }
 
-html,
+/* html,
 body {
     height: 100%;
 }
@@ -34,7 +34,7 @@ header {
     letter-spacing: 0.2em;
     font-size: 2.5em;
     padding: 1.2em 0 0.5em 0;
-}
+} */
 
 header h1 {
     font-size: 1em;
@@ -47,8 +47,8 @@ header h1 .js {
 
 main .sec {
     width: 100%;
-    max-width: 50em;
-    margin: 3em auto;
+    /* max-width: 50em; */
+    margin: 1em auto;
 }
 
 main .sec .head {
