--- a/LoadData/templates/base.html
+++ b/LoadData/templates/base.html
@@ -1,39 +1,46 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - FlapJack</title>
+    <meta name="description" content="FlapJack Project">
+    <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="{% static 'assets/css/styles.css' %}">
+    {% block header_content %}
+    {% endblock %}
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="{% url 'home' %}">BRAND</a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'LoadData:register' %}">Register</a>
-          </li>
 
-          {% if user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-          </li>
-          {% else %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'LoadData:user_login' %}">Login</a>
-          </li>
-          {% endif %}
-        </ul>
+  <body>
+    <nav class="navbar navbar-light navbar-expand fixed-top bg-light navigation-clean">
+      <div class="container"><a class="navbar-brand" href="/">FlapJack</a><button data-toggle="collapse"
+          class="navbar-toggler" data-target="#navcol-1"></button>
+        <div class="collapse navbar-collapse" id="navcol-1">
+          <ul class="nav navbar-nav ml-auto">
+            <li class="nav-item" role="presentation"><a class="nav-link active" href="/monkey/upload">Upload</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="/monkey/search">Search</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="/LoadData/user_login/">Login</a></li>
+            <li class="nav-item" role="presentation" style="display: none"><a class="nav-link" href="/monkey/massupload">Massive upload</a></li>
+          </ul>
+        </div>
       </div>
     </nav>
-
-    <div class="container">
-      {% block body_block %}
+    <div class="container-fluid" id="main-content">
+      {% block main_content %}
       {% endblock %}
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'assets/js/bs-animation.js' %}"></script>
+    {% block footer_content %}
+    {% endblock %}
   </body>
+
 </html>
