--- a/LoadData/templates/home.html
+++ b/LoadData/templates/home.html
@@ -1,4 +1,11 @@
-{% extends 'base_new.html' %}
+{% extends 'base.html' %}
+{% block header_content %}
+<style>
+  a {
+    color: #1b1e21;
+  }
+</style>
+{% endblock %}
 {% block main_content %}
     <header class="masthead text-white text-center">
       <div class="overlay"></div>
@@ -17,24 +24,24 @@
             <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
               <div class="d-flex features-icons-icon"><i class="icon-screen-desktop m-auto text-primary"
                   data-bs-hover-animate="pulse"></i></div>
-              <h3>Upload</h3>
-              <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+              <h3><a href="/monkey/upload">Upload</a></h3>
+              <p class="lead mb-0">Store your kinetic data from microplate reader</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
               <div class="d-flex features-icons-icon"><i class="icon-layers m-auto text-primary"
                   data-bs-hover-animate="pulse"></i></div>
-              <h3>Search</h3>
-              <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+              <h3><a href="/monkey/search">Search and Analyse</a></h3>
+              <p class="lead mb-0">Query public and private data to visualize and analyse</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
               <div class="d-flex features-icons-icon"><i class="icon-check m-auto text-primary"
                   data-bs-hover-animate="pulse"></i></div>
-              <h3>My Account</h3>
-              <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+              <h3><a href="/LoadData/user_login">Login</a></h3>
+              <p class="lead mb-0">Access to your stored experiments and share with people</p>
             </div>
           </div>
         </div>
