se agrega carga de CSS faltante

--- a/LoadData/templates/analysis.html
+++ b/LoadData/templates/analysis.html
@@ -3,6 +3,7 @@
 
 {% block header_content %}
 <title>Analysis</title>
+<link rel="stylesheet" href="{% static 'to_plot.css' %}">
 <style media="screen">
   input[type=text]{
     width: 100px;
