Changes made for IWBDA

--- a/LoadData/templates/analysis.html
+++ b/LoadData/templates/analysis.html
@@ -8,6 +8,9 @@
   input[type=text]{
     width: 100px;
   }
+  .bg-light {
+    background-color: #91a6bb!important;
+  }
 </style>
 {% endblock %}
 
