--- a/LoadData/templates/home.html
+++ b/LoadData/templates/home.html
@@ -17,7 +17,7 @@
         </div>
       </div>
     </header>
-    <section class="features-icons bg-light text-center">
+    <section class="features-icons bg-light text-center" style="padding-top: 45px; padding-bottom: 45px">
       <div class="container">
         <div class="row">
           <div class="col-lg-4">
@@ -25,7 +25,7 @@
               <div class="d-flex features-icons-icon"><i class="icon-screen-desktop m-auto text-primary"
                   data-bs-hover-animate="pulse"></i></div>
               <h3><a href="/monkey/upload">Upload</a></h3>
-              <p class="lead mb-0">Store your kinetic data from microplate reader</p>
+              <p class="lead mb-0">Store your kinetic data from microplate reader and other sources</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -33,7 +33,7 @@
               <div class="d-flex features-icons-icon"><i class="icon-layers m-auto text-primary"
                   data-bs-hover-animate="pulse"></i></div>
               <h3><a href="/monkey/search">Search and Analyse</a></h3>
-              <p class="lead mb-0">Query public and private data to visualize and analyse</p>
+              <p class="lead mb-0">Query public and private data to visualize, analyse and modelling</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -41,7 +41,7 @@
               <div class="d-flex features-icons-icon"><i class="icon-check m-auto text-primary"
                   data-bs-hover-animate="pulse"></i></div>
               <h3><a href="/LoadData/user_login">Login</a></h3>
-              <p class="lead mb-0">Access to your stored experiments and share with people</p>
+              <p class="lead mb-0">Manage your stored experiments and share with people</p>
             </div>
           </div>
         </div>
