--- a/LoadData/templates/to_plot.html
+++ b/LoadData/templates/to_plot.html
@@ -1,15 +1,19 @@
 <div class="tabs">
   <div class="tab-button-outer">
     <ul id="tab-button">
-      <li><a href="#tab01">Expression rate</a></li>
-      <li><a href="#tab02">Expression </a></li>
+      <!-- <li><a href="#tab01">Expression rate</a></li>
+      <li><a href="#tab02">Expression </a></li> -->
+      <li><a href="#tab01">Rate</a></li>
+      <li><a href="#tab02">Level </a></li>
     </ul>
   </div>
 
   <div class="tab-select-outer">
     <select id="tab-select">
-      <option value="#tab01">Expression rate</option>
-      <option value="#tab02">Expression</option>
+      <!-- <option value="#tab01">Expression rate</option>
+      <option value="#tab02">Expression</option> -->
+      <option value="#tab01">Rate</option>
+      <option value="#tab02">Level</option>
     </select>
   </div>
   {% for elem in graph %}
