--- a/LoadData/templates/base.html
+++ b/LoadData/templates/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - FlapJack</title>
+    <!-- <title>Home - FlapJack</title> -->
     <meta name="description" content="FlapJack Project">
     <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet"
