--- a/LoadData/templates/base.html
+++ b/LoadData/templates/base.html
@@ -27,7 +27,8 @@
             <li class="nav-item" role="presentation"><a class="nav-link active" href="/monkey/upload">Upload</a></li>
             <li class="nav-item" role="presentation"><a class="nav-link" href="/monkey/search">Search</a></li>
             <li class="nav-item" role="presentation"><a class="nav-link" href="/LoadData/user_login/">Login</a></li>
-            <li class="nav-item" role="presentation" style="display: none"><a class="nav-link" href="/monkey/massupload">Massive upload</a></li>
+            <!-- <li class="nav-item" role="presentation" style="display: none"><a class="nav-link" href="/monkey/massupload">Massive upload</a></li> -->
+            <li class="nav-item" role="presentation"><a class="nav-link" href="/monkey/massupload">Massive upload</a></li>
           </ul>
         </div>
       </div>
