--- a/LoadData/templates/base.html
+++ b/LoadData/templates/base.html
@@ -8,12 +8,10 @@
     <!-- <title>Home - FlapJack</title> -->
     <meta name="description" content="FlapJack Project">
     <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
-    <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="{% static 'assets/animate/animate.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/simple-line-icons/simple-line-icons.min.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/google-font/google-font.css' %}">  
     {% block header_content %}
     {% endblock %}
   </head>
